2018/07/05 10:59 按照开发标准更新

--- a/project.config.json
+++ b/project.config.json
@@ -3,6 +3,10 @@
 	"pluginRoot": "./plugin",
 	"compileType": "plugin",
 	"setting": {
+		"urlCheck": false,
+		"es6": true,
+		"postcss": true,
+		"minified": true,
 		"newFeature": true
 	},
 	"appid": "wx63442a92b35ad4ed",
