2018/07/07/18:51-插件模板开发

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,8 @@
   "pages": [
       "pages/admin/admin",
     "pages/index/index",
-    "pages/productDetailed/index"
+    "pages/productDetailed/index",
+    "pages/admainV3/index"
   ],
   "plugins": {
     "myPlugin": {
